@@ -1,3 +1,9 @@
+2009-02-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/sc_plugin.c:
+   Use Geany's main_locale_init() to init the localisation system.
+
+
 2009-02-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/speller.c:
